Fix z-index issue while chats list opened and user clicks on settings

--- a/sass/partials/_charts.scss
+++ b/sass/partials/_charts.scss
@@ -823,7 +823,7 @@
 	flex: 1 0 auto;
 	height: 100%;
 	display: flex;
-	z-index: 100001;
+	z-index: 100003;
 	outline: none;
 	position: absolute;
 	overflow-y: auto;
