--- a/sass/partials/content/_left-bar.scss
+++ b/sass/partials/content/_left-bar.scss
@@ -26,7 +26,7 @@ Blocks from left bar
 	padding: 2px 0;
 	background: var(--clr-block);
 	z-index: 10;
-	z-index: 100003;
+	z-index: 100005;
 	transform: translateX(-40px);
 	transition: 200ms cubic-bezier(.4,0,.2,1) 0ms;
 	/*border: 1px solid var(--clr-separator);*/
